paper_routing/hopfield_hls/hopfield_routing/solution1/csim/report/hopfield_routing_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../tb_hopfield_routing.cpp in debug mode
../../../../tb_hopfield_routing.cpp: En la función ‘int main()’:
../../../../tb_hopfield_routing.cpp:191:29: error: invalid initialization of non-const reference of type ‘float&’ from an rvalue of type ‘float’
   hopfield_routing(V, U_1, l);
                             ^
../../../../tb_hopfield_routing.cpp:6:6: nota:   argumento de inicialización 3 de ‘void hopfield_routing(float*, float*, float&)’
 void hopfield_routing( float V[N1 * N1],
      ^~~~~~~~~~~~~~~~
make: *** [csim.mk:76: obj/tb_hopfield_routing.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
